handle -features (scala), improve build time by incremental compilation